# kyaee-idea

./: README.md  skills-lock.json
backend/: Cargo.toml
backend/src/: ai.rs  error.rs  main.rs  state.rs  stellar.rs
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx
contexts/: river_warrior_gap_remediation.md  river_warrior_prd_master.md  river_warrior_verification_matrix.md
contracts/river_warrior/: Cargo.toml
contracts/river_warrior/src/: lib.rs  test.rs
contracts/river_warrior/test_snapshots/test/: test_double_claim_rejected.1.json  test_set_bounty_and_verify.1.json  test_total_disbursed_state.1.json  test_unauthorized_disburse.1.json
